# dmw3-tools

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  convert_toml_to_txt.py
.github/workflows/: rust.yml
assets/: style.css
assets/backgrounds/: index.py
assets/dmw2003/: digivolutions.json  item_shops.json
dump/dmw2003/: booster_data  booster_data_items  card_pricing  card_shop_items  card_shops  complex_steps  digimon_names.txt  digivolution_conditions  digivolution_conditions.json  digivolutions  digivolutions.json  encounters  encounters.json  encounters_pointer  enemy_parties  enemy_stats  enemy_stats.json  item_names.txt  item_shops  maps.tar  move_data  move_data.json  move_names.txt  party_exp_bits  quest_ranges  rookies  rookies.json  screen_name_mapping  screen_names.txt  shop_items  shop_names.txt  shops  starting_folder
dump/dmw2003/maps/WSTAG200.PRO/: areas  encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions
dump/dmw2003/maps/WSTAG201.PRO/: encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions
dump/dmw2003/maps/WSTAG202.PRO/: areas  encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions
dump/dmw2003/maps/WSTAG203.PRO/: encounters  entities  entity_conditions  entity_logics  grids
dump/dmw2003/maps/WSTAG205.PRO/: areas  encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions
dump/dmw2003/maps/WSTAG206.PRO/: encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions  stage_encounter_areas
dump/dmw2003/maps/WSTAG210.PRO/: areas  encounters  entities  entity_conditions  entity_logics  grids  scripts_conditions
dump/dmw2003/maps/WSTAG211.PRO/: areas  entities  entity_conditions  entity_logics  grids  scripts_conditions  (+1 more)
public/: style.css
src/: components.rs  data.rs  enums.rs  main.rs  pages.rs  route.rs
src/components/: calculators.rs  card_game.rs  data.rs  digivolution.rs  digivolution_select.rs  import.rs  item_select.rs  maps.rs  modding.rs  move_data.rs  move_select.rs  navbar.rs  number_field.rs  party_data.rs  rookie_select.rs  speed_modifier.rs  stat_boost.rs
src/pages/: ambush.rs  blasts.rs  boosters.rs  card_shops.rs  digivolution_tech.rs  digivolutions.rs  dv_conds.rs  enemy_stats.rs  grids.rs  hit_chance.rs  index.rs  map_entities.rs  maps.rs  models.rs  parties.rs  rookie_level.rs  rta_run.rs  run_way.rs  shops.rs  steal_chance.rs  turn_starter_chance.rs  xp.rs
(+1328 files in other folders)
