[package]
name = "dmw3-tools-2"
version = "0.1.0"
authors = ["Marko Grizelj <marko.grizelj@gauss.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

dmw3_structs = { git = "https://github.com/markisha64/dmw3-util" }
binread = "2.2.0"
tar = "0.4.41"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
